# boid

boid/c/: CMakeLists.txt
boid/js/: boid.html
boid/js/c/: main.c
